# DelayArchitect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmarks/: LinearSmoother.cpp
cmake/: FaustWrap.cmake
docs/: Delay Designer PST format.txt
scripts/: faustwrap.d
scripts/MakeElliptic/: EllipticFilter.dsp  MakeElliptic.jl  Project.toml
sources/appconfig/: AppConfig.h
sources/editor/: Editor.cpp  Editor.h  LookAndFeel.cpp  LookAndFeel.h
sources/editor/attachments/: AutomaticComboBoxParameterAttachment.cpp  AutomaticComboBoxParameterAttachment.h  ComboBoxParameterAttachmentByID.cpp  ComboBoxParameterAttachmentByID.h  GridParameterAttachment.cpp  GridParameterAttachment.h  InvertedButtonParameterAttachment.cpp  InvertedButtonParameterAttachment.h  SliderParameterAttachmentWithTooltip.cpp  SliderParameterAttachmentWithTooltip.h  TapParameterAttachment.cpp  TapParameterAttachment.h
sources/editor/importer/: Importer.cpp  Importer.h  ImporterPST.cpp  ImporterPST.h
sources/editor/parts/: AboutComponent.cpp  AboutComponent.h  AdvancedTooltipWindow.cpp  AdvancedTooltipWindow.h  BetterSlider.cpp  BetterSlider.h  FadGlyphButton.cpp  FadGlyphButton.h  MainComponent.cpp  MainComponent.h  SVGGlyphButton.cpp  SVGGlyphButton.h  TapEditScreen.cpp  TapEditScreen.h  TapSlider.cpp  TapSlider.h
sources/editor/utility/: CommonPrefix.cpp  CommonPrefix.h  FunctionalTimer.h
sources/gd/: Gd.cpp  Gd.h  GdDefs.cpp  GdDefs.h  GdFilter.cpp  GdFilter.h  GdFilter.hpp  GdJuce.h  GdLine.cpp  GdLine.h  GdNetwork.cpp  GdNetwork.h  GdSIMD.h  GdShifter.cpp  GdShifter.h  GdShifter.hpp  GdTapFx.cpp  GdTapFx.h
sources/gd/filters/: GdFilterAA.cpp  GdFilterAA.h  GdFilterAA.hpp  GdFilterDataAA.hxx  GdFilterHP12.hxx  GdFilterHP6.hxx  GdFilterLP12.hxx  GdFilterLP6.hxx  GdFilters.dsp
sources/gd/shifters/: GdShifterSimple.cpp  GdShifterSimple.h  GdShifterSimple.hpp  GdShifterSoundTouch.cpp  GdShifterSoundTouch.h  GdShifterSuperCollider.cpp  GdShifterSuperCollider.h
sources/gd/utility/: Clamp.h  CubicNL.h  LinearSmoother.cpp  LinearSmoother.h  Locale.cpp  Locale.h  Locale.hpp  NextPowerOfTwo.h  RsqrtNL.h  StdcLocale.cpp  StdcLocale.h  StdcLocale.hpp  Volume.h
sources/plugin/: Editor.cpp  ImGuiComponent.cpp  ImGuiComponent.h  ImGuiHelpers.cpp  ImGuiHelpers.h  Processor.cpp  Processor.h
sources/processor/: PresetFile.cpp  PresetFile.h  Processor.cpp  Processor.h
sources/utility/: AutoDeletePool.h  AutoDeletePool.hpp
